Fix Hero button display on tablet screen

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -54,6 +54,10 @@
     line-height: 72px;
   }
 
+  &--nowrap {
+    white-space: nowrap;
+  }
+
   &--light {
     color: $c_black;
     background-color: $c_white;
